<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="5"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/myGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
        android:id="@+id/button1"
        android:layout_width="175dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:text="@string/speak"
        app:layout_gravity="" />

        <Button
            android:id="@+id/button2"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:text="@string/evening"
            app:layout_gravity="center" />

        <Button
            android:id="@+id/button3"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:text="@string/hello"
            app:layout_row="1"
            app:layout_column="0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/howAreYou"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="6dp"
            android:text="@string/iLiveIn"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@string/myNameIs"
            app:layout_row="2"
            app:layout_column="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12.5dp"
            android:text="@string/please"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button8"
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@string/welcome"
            app:layout_row="3"
            app:layout_column="1" />

        <SeekBar
            android:id="@+id/scrubSeekbar"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_column="0"
            app:layout_gravity="bottom"
            app:layout_row="0" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.gridlayout.widget.GridLayout>

</GridLayout>